# mediaforge

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  FILES-WRITTEN.md  INDEX.md  LICENSE  MANIFEST.md  README.md  _task-log-2026-02-23-logging-fix.md  _task-log-session7b-cicd.md  _task-log.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
data/: config.yaml
scripts/: build-sidecar.py  setup-linux.sh  setup-windows.ps1
sidecar/: README.md  _task-log.md  config.default.yaml  main.py  requirements.txt
sidecar/core/: __init__.py  api_client.py  config.py  db.py  face_engine.py  file_classifier.py  indexer.py  metadata_engine.py  models.py  rules.py  watcher.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
src/lib/components/: FileItem.svelte  Sidebar.svelte  StarRating.svelte  TagPill.svelte  ToggleSwitch.svelte
src/lib/stores/: faces.ts  files.ts  sentry.ts  settings.ts
src/lib/utils/: formatters.ts  ipc.ts
src/views/: Forge.svelte  Sentry.svelte  Settings.svelte  Vault.svelte
tests/: test_sidecar.py
